--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -139,27 +139,32 @@ android {
     }
 
     applicationVariants.all { variant ->
+        // create separate code coverage tasks(for androidTests) for every build variant
         def buildVariant = variant.name
         createCoverageTask(buildVariant, androidTestType)
     }
 }
 
 ext.createCoverageTask = { buildVariant, testType ->
+    // Code coverage task depends on additional task to run all android tests and its output is stored in .ec file
     def androidTestTask = "connected${buildVariant.capitalize()}AndroidTest"
     def androidTestFile = "outputs/code_coverage/${buildVariant}AndroidTest/connected/*.ec"
 
+    // Task to generate coverage report for particular build variant, that depends on additional tasks(androidTestTask)
     task "${buildVariant}Msal${testType}CoverageReport" (type:JacocoReport, dependsOn: [androidTestTask]) {
         group = "Code Coverage MsalAutomation"
         description = "Generate Msal Coverage Reports(${testType}) on the ${buildVariant.capitalize()}"
+
+        // Include source files(of msalautomation) in which code coverage needs to be found, after filtering out some set of files
         def coverageSourceDirs = "${projectDir}/src/main/java"
         def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test.*']
         def javaClasses = fileTree(
                 dir: "${buildDir}/intermediates/javac/${buildVariant}/classes",
                 excludes: fileFilter
         )
-        //To include common files in the coverage report
+
+        // Include additional source files(as msalautomation depends on common and msal) in code coverage report
         def commonBuild = buildVariant.matches("(.*)Debug(.*)") ? "debug" : "release"
-        //To include msal files in the coverage report
         def msalBuild = buildVariant.matches("(.*)local(.*)") ? "localDebug" : "distDebug"
         def additionalCoverageSourceDirs = [
                 "${projectDir}/../msal/msal/src/main/java",
@@ -170,11 +175,16 @@ ext.createCoverageTask = { buildVariant, testType ->
                 fileTree( dir: "${buildDir}/../msal/intermediates/javac/${msalBuild}/classes", excludes: fileFilter)
         ]
 
+        //Include all those directories for source files and additional source files defined above
         sourceDirectories.from = files([coverageSourceDirs])
         additionalSourceDirs.from = files(additionalCoverageSourceDirs)
         additionalClassDirs.from = files([additionalJavaClasses])
         classDirectories.from = files([javaClasses])
+
+        //Code coverage report is generated based on the the output files of additional tasks(i.e, androidTestTask)
         executionData.from = fileTree(dir: "$buildDir", includes: [androidTestFile])
+
+        // html reports are auto-generated without enabling flag, so enabling xml flag
         reports {
             xml.enabled = true
         }
