--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -186,6 +186,17 @@ task pmd(type: Pmd) {
     }
 }
 
+afterEvaluate {
+   // Gradle 6.1.1 and Android Gradle Plugin 4.0.1 doesn't rename the file (see 'outputFileName' above)
+   // Adding this work around to have the file properly renamed.
+   def buildFile = file("$buildDir/outputs/aar/${archivesBaseName}-release.aar")
+   tasks.named("assembleRelease").configure {
+       doLast {
+           buildFile.renameTo("$buildDir/outputs/aar/${archivesBaseName}-${version}.aar")
+       }
+   }
+}
+
 publishing {
     publications {
         msal(MavenPublication) {
