--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -191,12 +191,14 @@ task pmd(type: Pmd) {
 afterEvaluate {
    // Gradle 6.1.1 and Android Gradle Plugin 4.0.1 doesn't rename the file (see 'outputFileName' above)
    // Adding this work around to have the file properly renamed.
-   def buildFile = file("$buildDir/outputs/aar/${archivesBaseName}-release.aar")
-   print "Build file $buildFile"
    tasks.named("assembleDistRelease").configure {
+       def buildFile = file("$buildDir/outputs/aar/${archivesBaseName}-dist-release.aar")
+       print "Build file $buildFile"
        doLast {
-           print "Renaming build file $buildFile to '$buildDir${File.separator}outputs${File.separator}aar${File.separator}${archivesBaseName}-${version}.aar'"
-           buildFile.renameTo("$buildDir${File.separator}outputs${File.separator}aar${File.separator}${archivesBaseName}-${version}.aar")
+           println "Renaming build file $buildFile to '$buildDir${File.separator}outputs${File.separator}aar${File.separator}${archivesBaseName}-${version}.aar'"
+           if (!buildFile.renameTo("$buildDir${File.separator}outputs${File.separator}aar${File.separator}${archivesBaseName}-${version}.aar")) {
+               println "Rename failed!"
+           }
        }
    }
 }
