--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -117,6 +117,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
+    classifier 'sources'
 }
 
 dependencies {
