--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.application'
 
+def msalVersion = "2.+"
+
+if (project.hasProperty("distMsalVersion")) {
+    msalVersion = distMsalVersion
+}
+
 android {
 
     final String BROKER_HOST = "BrokerHost"
@@ -137,7 +143,7 @@ android {
 dependencies {
     // Compile Dependency
     localImplementation project(':msal')
-    distImplementation 'com.microsoft.identity.client:msal:2.+'
+    distImplementation "com.microsoft.identity.client:msal:${msalVersion}"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.ext.constraintLayoutVersion"
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appCompatVersion"
