--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -60,7 +60,7 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
