--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -144,9 +144,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.0.6', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.0.6-getAccountLogsForFoci-5', changing: true)
 
-    distApi("com.microsoft.identity:common:3.0.6") {
+    distApi("com.microsoft.identity:common:3.0.6-getAccountLogsForFoci-5") {
         transitive = false
     }
 }
