--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -38,7 +38,7 @@ android {
     defaultConfig {
         multiDexEnabled true
         minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion 29//rootProject.ext.targetSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode getAppVersionCode()
         versionName getAppVersionName()
         project.archivesBaseName = "msal"
