added property for targetSdkVersion to set via command line when running robolectric tests

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -38,7 +38,12 @@ android {
     defaultConfig {
         multiDexEnabled true
         minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        if(project.getProperties().get("robolectricSdkVersion")){
+            println "Using command line parameter robolectricSdkVersion for target sdk version"
+            targetSdkVersion project.getProperties().get("robolectricSdkVersion")
+        }else{
+            targetSdkVersion rootProject.ext.targetSdkVersion
+        }
         versionCode getAppVersionCode()
         versionName getAppVersionName()
         project.archivesBaseName = "msal"
