--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -15,6 +15,7 @@ android {
     final String BROKER_HOST = "BrokerHost"
     final String BROKER_MICROSOFT_AUTHENTICATOR = "BrokerMicrosoftAuthenticator"
     final String BROKER_COMPANY_PORTAL = "BrokerCompanyPortal"
+    final String AUTO_BROKER = "AutoBroker"
     final String SELECTED_BROKER = "SELECTED_BROKER"
 
     signingConfigs {
@@ -52,6 +53,7 @@ android {
         buildConfigField("String", BROKER_MICROSOFT_AUTHENTICATOR, "\"$BROKER_MICROSOFT_AUTHENTICATOR\"")
         buildConfigField("String", BROKER_COMPANY_PORTAL, "\"$BROKER_COMPANY_PORTAL\"")
         buildConfigField("String", BROKER_HOST, "\"$BROKER_HOST\"")
+        buildConfigField("String", AUTO_BROKER, "\"$AUTO_BROKER\"")
     }
 
     testOptions {
@@ -111,6 +113,11 @@ android {
             dimension "broker"
             buildConfigField("String", SELECTED_BROKER, "\"$BROKER_HOST\"")
         }
+
+        AutoBroker {
+            dimension "broker"
+            buildConfigField("String", SELECTED_BROKER, "\"$AUTO_BROKER\"")
+        }
     }
 
     variantFilter { variant ->
@@ -128,6 +135,11 @@ android {
         }
 
         if (flavorName.contains("local") && flavorName.contains("BrokerCompanyPortal") && buildType.contains("debug")) {
+            // Gradle ignores any variants that satisfy the conditions above.
+            setIgnore(true)
+        }
+
+        if (flavorName.contains("local") && flavorName.contains("AutoBroker")) {
             // Gradle ignores any variants that satisfy the conditions above.
             setIgnore(true)
         }
@@ -158,7 +170,7 @@ ext.createCoverageTask = { buildVariant, testType ->
     def androidTestFile = "outputs/code_coverage/${buildVariant}AndroidTest/connected/*.ec"
 
     // Task to generate coverage report for particular build variant, that depends on additional tasks(androidTestTask)
-    task "${buildVariant}Msal${testType}CoverageReport" (type:JacocoReport, dependsOn: [androidTestTask]) {
+    task "${buildVariant}Msal${testType}CoverageReport"(type: JacocoReport, dependsOn: [androidTestTask]) {
         group = "Code Coverage MsalAutomation"
         description = "Generate Msal Coverage Reports(${testType}) on the ${buildVariant.capitalize()}"
 
@@ -180,8 +192,8 @@ ext.createCoverageTask = { buildVariant, testType ->
                 "${projectDir}/../common/common/src/main/java",
         ]
         def additionalJavaClasses = [
-                fileTree( dir: "${buildDir}/../${commonFilePath}/intermediates/javac/${commonBuild}/classes", excludes: fileFilter),
-                fileTree( dir: "${buildDir}/../${msalFilePath}/intermediates/javac/${msalBuild}/classes", excludes: fileFilter)
+                fileTree(dir: "${buildDir}/../${commonFilePath}/intermediates/javac/${commonBuild}/classes", excludes: fileFilter),
+                fileTree(dir: "${buildDir}/../${msalFilePath}/intermediates/javac/${msalBuild}/classes", excludes: fileFilter)
         ]
 
         //Include all those directories for source files and additional source files defined above
