--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -34,8 +34,17 @@ if (project.hasProperty("distMsalVersion")) {
 
 android {
 
+    compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.msft.identity.client.sample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -84,6 +93,9 @@ android {
 }
 
 dependencies {
+
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$rootProject.ext.coreLibraryDesugaringVersion"
+
     // Compile Dependency
     localImplementation project(':msal')
     distImplementation "com.microsoft.identity.client:msal:${msalVersion}"
