Comment out testCoverageEnabled - Bump to RC4

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -16,8 +16,6 @@ group = 'com.microsoft.identity.client'
 //    jacoco.excludes = ['jdk.internal.*']
 //}
 
-
-
 //Constants:- used to generate Coverage report task
 def unitTestType = "UnitTest"
 def androidTestType = "AndroidTest"
@@ -54,12 +52,12 @@ android {
     buildTypes {
         // testCoverageEnabled flag is set to true to get coverage reports for Android Tests
         debug {
-            testCoverageEnabled true
+//            testCoverageEnabled true
             debuggable true
             buildConfigField("String", "VERSION_NAME", "\"${versionName}\"")
         }
         release {
-            testCoverageEnabled true
+//            testCoverageEnabled true
             minifyEnabled false
             debuggable false
             consumerProguardFiles 'consumer-rules.pro'
