--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -23,6 +23,8 @@ def bothTestType = "BothTest"
 
 android {
 
+    /*
+    //Commenting out until the next major version of common/msal/etc...
     compileOptions {
         // Flag to enable support for the new language APIs
         coreLibraryDesugaringEnabled true
@@ -30,6 +32,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    */
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
@@ -225,7 +228,8 @@ task sourcesJar(type: Jar) {
 
 dependencies {
 
-    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$rootProject.ext.coreLibraryDesugaringVersion"
+    //Commenting out until the next major version of common/msal/etc...
+    //coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$rootProject.ext.coreLibraryDesugaringVersion"
 
     def mockito_version = 'latest.release'
 
