--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:name="com.microsoft.identity.client.testapp.MsalSampleApp"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
