Consume custom test runner for ui automation

--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -51,7 +51,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.microsoft.identity.client.ui.automation.runner.IdentityTestRunner"
 
         // The following argument makes the Android Test Orchestrator run its
         // "pm clear" command after each test invocation. This command ensures
