--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -274,9 +274,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.0.9', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.1.1-RC1', changing: true)
 
-    distApi("com.microsoft.identity:common:3.0.9") {
+    distApi("com.microsoft.identity:common:3.1.1-RC1") {
         transitive = false
     }
 }
