--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -34,13 +34,14 @@ if (project.hasProperty("distMsalVersion")) {
 
 android {
 
-    compileOptions {
-        // Flag to enable support for the new language APIs
-        coreLibraryDesugaringEnabled true
-        // Sets Java compatibility to Java 8
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+// Commented out becuase we haven't supported this in MSAL yet. Having this on could be misleading.
+//    compileOptions {
+//        // Flag to enable support for the new language APIs
+//        coreLibraryDesugaringEnabled true
+//        // Sets Java compatibility to Java 8
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
 
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
@@ -94,7 +95,8 @@ android {
 
 dependencies {
 
-    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$rootProject.ext.coreLibraryDesugaringVersion"
+// Commented out becuase we haven't supported this in MSAL yet. Having this on could be misleading.
+//  coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$rootProject.ext.coreLibraryDesugaringVersion"
 
     // Compile Dependency
     localImplementation project(':msal')
